--- a/src/css/project/urbis.css
+++ b/src/css/project/urbis.css
@@ -1,3 +1,8 @@
+/* Header ======== */
+.urbis #header .home, .urbis #header .menu {
+    display: none;
+}
+
 /* Intro ========= */
 .urbis .intro #app-map {
     display: none;
