--- a/src/css/project/eea.css
+++ b/src/css/project/eea.css
@@ -1,3 +1,8 @@
+/* Header ======== */
+.eea #header .home, #header .eea .menu {
+	display: none;
+}
+
 /* Intro ========= */
 .eea .intro #app-map {
 	display: none;
