--- a/src/css/newDesign.css
+++ b/src/css/newDesign.css
@@ -2,7 +2,6 @@
 .newDesign #content-intro-terms{
     color: #555;
 }
-
 .newDesign #content-intro-terms #agreement-accept .x-btn{
     background: #c92d42;
     transition: background .3s ease-out;
@@ -102,7 +101,6 @@
     border-right: 1px solid white;
     background: #aaa;
 }
-
 .newDesign #loginwindow .x-btn:last-child:hover {
     background: #888;
 }
@@ -111,7 +109,6 @@
 .newDesign #footer {
     z-index: initial;
 }
-
 .newDesign #footer-bar {
     border-top: 2px solid #d3d2d2;
 }
@@ -122,20 +119,20 @@
 .newDesign #footer-legal {
     line-height: 14px;
 }
+
 /* Intro === */
-.newDesign #content-intro{
+.newDesign #content-intro, .newDesign #content-intro-guide {
     background-color: rgb(67, 66, 84);
     background-color: rgba(67, 66, 84, .9);
-    padding: 19px;
     border: 1px solid #666;
+}
+
+.newDesign #content-intro {
+    padding: 19px;
     border-left: 0;
     width: 850px;
 }
-
 .newDesign #content-intro-guide {
-    background-color: rgb(67, 66, 84);
-    background-color: rgba(67, 66, 84, .9);
-    border: 1px solid #666;
     border-right: 0;
     color: #eee;
     top: auto;
@@ -145,11 +142,12 @@
 .newDesign #about-urbis h2 {
     margin-top: 15px;
 }
-
 .newDesign #content-intro-terms h2,
 .newDesign #content-intro-guide h2 {
     border: 0;
 }
+
+/* into toolbar */
 .newDesign #toolbar {
     background: rgb(67, 66, 84);
     border-bottom: 2px solid rgb(36, 36, 49);
@@ -189,7 +187,8 @@
     font-weight: 600;
 }
 
-/* App Header === */
+/* === Application === */
+/* App toolbar === */
 .newDesign #toolbar {
     height: 105px;
 }
@@ -238,7 +237,7 @@
     margin-bottom: -7px;
 }
 .newDesign #toolbar .fields .group .field.help {
-    bottom: 5px;
+    bottom: 0;
     margin-left: -160px;
     position: absolute;
 }
@@ -256,10 +255,21 @@
     font-size: 20px;
 }
 
-/* help */
+/* help buttons */
+.newDesign #app-toolbar-contexthelp .x-btn, .newDesign #app-toolbar-webhelp .x-btn,
+.newDesign #app-toolbar-contexthelp .x-btn-center, .newDesign #app-toolbar-webhelp .x-btn-center,
+.newDesign #app-toolbar-contexthelp .x-btn-icon, .newDesign #app-toolbar-webhelp .x-btn-icon {
+    width: 23px !important;
+    height: 23px !important;
+    top: 0;
+    left: 0;
+}
+
 .newDesign .field.help .help-btn .x-btn {
     background: rgba(255,255,255,.2);
     border: 1px solid rgba(255,255,255,.3);
+    width: 23px;
+    height: 23px;
 }
 .newDesign .field.year .widget .x-field .x-form-item-body{
     color: #eee;
@@ -270,10 +280,27 @@
 .newDesign #button-1033-btnIconEl{
     color: #555;
 }
+.newDesign #app-toolbar-contexthelp {
+    height: 23px;
+    width: 23px;
+}
+.newDesign #app-toolbar-contexthelp span.x-btn-icon {
+    background: url('../images/new/help-context-white.png') no-repeat 50% 50% !important;
+}
+.newDesign #app-toolbar-webhelp span.x-btn-icon {
+    background: url('../images/new/help-web-white.png') no-repeat 50% 50% !important;
+}
 
 /* dataview field */
+.newDesign #app-toolbar-visualization-manage .x-btn-icon, .newDesign #app-toolbar-manage .x-btn-icon {
+    background: url(../images/new/settings.png) no-repeat 50% 50% !important;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+}
 .newDesign #app-toolbar-save, .newDesign #app-toolbar-manage, .newDesign #app-toolbar-share, .newDesign #app-toolbar-visualization-save, .newDesign #app-toolbar-visualization-manage {
-    background: rgba(255,255,255,.5);
+    background: rgba(255,255,255,.6);
     height: 23px;
     line-height: 23px;
 }
@@ -307,10 +334,20 @@
     border-radius: 0 1px 1px 0;
     border-left: 0;
 }
+.newDesign.x-border-box #app-toolbar-theme .x-form-trigger,
+.newDesign.x-border-box #app-toolbar-visualization .x-form-trigger {
+    border-radius: 0;
+    border-right-width: 0;
+}
+.newDesign.x-border-box #app-toolbar-theme .x-form-trigger.x-form-refresh-trigger,
+.newDesign.x-border-box #app-toolbar-visualization .x-form-trigger.x-form-refresh-trigger {
+    border-radius: 0 1px 1px 0;
+    border-right-width: 1px;
+}
+
 .newDesign.x-border-box .x-form-trigger.x-form-refresh-trigger {
     background           : rgba(255,255,255,.2) url("../images/new/refresh-white.png") no-repeat 50% 50% !important;
-    border-left: 0;
-    margin-left: -1px;
+    border-left: 1px solid rgba(255,255,255,.3) !important;
 }
 .newDesign.x-border-box .x-form-trigger.x-form-spinner-up {
     background           : #eee url("../images/new/collapse.png") no-repeat 50% 50%;
@@ -318,7 +355,6 @@
 .newDesign.x-border-box .x-tbar-loading {
     background           : #eee url("../images/new/refresh-small.png") no-repeat 50% 50% !important;
 }
-
 .newDesign.x-border-box .custom-combo .x-form-text {
     border-radius: 1px 0 0 1px;
     color: #ddd;
@@ -440,12 +476,10 @@
 }
 
 /* Tabs ================= */
-
 .newDesign.x-border-box .x-tab-bar {
     background: white;
     border-bottom: 1px solid #ddd !important;
 }
-
 .newDesign.x-border-box .x-tab-bar-strip {
     height: 0;
     border: 0;
@@ -499,7 +533,8 @@
 }
 /*Basic buttons*/
 .newDesign .x-btn-default-small {
-    background: #c92d42;
+    background: rgba(201,45,66,.85);
+    border: 0;
     border-radius: 1px;
     transition: background .3s ease-out;
 }
@@ -514,12 +549,10 @@
     background: #bbbbc0;
     border: 1px solid #bbbbc0;
 }
-
 .newDesign #app-toolbar-visualization-save .x-btn-default-small .x-btn-inner, .newDesign #app-toolbar-visualization-manage .x-btn-default-small .x-btn-inner, .newDesign #app-toolbar-save .x-btn-default-small .x-btn-inner, .newDesign #app-toolbar-share .x-btn-default-small .x-btn-inner {
     color: #555;
     font-size: 11px;
 }
-
 .newDesign #agreement-btns .x-btn-default-small .x-btn-inner {
     color: #fff;
 }
@@ -596,17 +629,6 @@
     background: url("../images/new/attach.png") no-repeat 50% 50% !important;
     width: 20px;
     height: 20px;
-}
-
-/* help buttons */
-.newDesign #app-toolbar-contexthelp {
-    height: 23px;
-}
-.newDesign #app-toolbar-contexthelp span.x-btn-icon {
-    background: url('../images/new/help-context-white.png') no-repeat 50% 50% !important;
-}
-.newDesign #app-toolbar-webhelp span.x-btn-icon {
-    background: url('../images/new/help-web-white.png') no-repeat 50% 50% !important;
 }
 
 /* map tools buttons */
@@ -718,7 +740,6 @@
 .newDesign .x-window-body {
     border: 0;
 }
-
 .newDesign .x-toolbar-footer {
     background: none;
     border: 0;
@@ -726,22 +747,19 @@
 .newDesign .x-toolbar-footer.x-docked-bottom {
     border: 0 !important;
 }
-
 .newDesign .x-window .x-grid .x-toolbar-default.x-docked-top {
     background: #CFCFD3;
     margin-bottom: 5px !important;
     border-bottom: 0 !important;
 }
-
 .newDesign .x-action-col-icon:hover {
     cursor: pointer;
 }
 .newDesign .x-boundlist .x-boundlist-item {
     border-top           : 1px solid #ddd;
 }
-
 .newDesign .x-boundlist.custom-combo-list .x-boundlist-item {
-    /*background           : #eee;*/
+    background           : #eee;
     color                : #333;
     padding: 3px 5px;
 }
