--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -10,6 +10,7 @@
 
 .placeholder {
     background: rgb(140,140,140);
+    border: 1px solid rgba(255,255,255,.3);
     border-radius: .1rem;
     height: 1.5rem;
     position: relative;
