--- a/src/css/project/melodies.css
+++ b/src/css/project/melodies.css
@@ -131,6 +131,28 @@
 	border-left-width: 0;
 }
 
+.melodies.x-border-box #app-toolbar-theme .x-form-trigger.x-form-refresh-trigger,
+.melodies.x-border-box #app-toolbar-visualization .x-form-trigger.x-form-refresh-trigger {
+	margin-left: -1px;
+	border-left: 0 !important;
+}
+
+/* +- */
+.melodies .field.level .x-btn .x-btn-inner {
+	color: #666;
+}
+
+/* help */
+.newDesign .field.help .help-btn .x-btn {
+	border: 1px solid #aaa;
+}
+.melodies #app-toolbar-contexthelp span.x-btn-icon {
+	background: url('../../images/melodies/help-context.png') no-repeat 50% 50% !important;
+}
+.melodies #app-toolbar-webhelp span.x-btn-icon {
+	background: url('../../images/melodies/help-web.png') no-repeat 50% 50% !important;
+}
+
 /* dataview field */
 .melodies #app-toolbar-save, .melodies #app-toolbar-manage, .melodies #app-toolbar-share, .melodies #app-toolbar-visualization-save, .melodies #app-toolbar-visualization-manage {
 	background: rgba(100,100,100,.3);
@@ -232,9 +254,11 @@
 /* Widget */
 .melodies .placeholder.open {
 	background: #009fe3;
+	border: 1px solid #009fe3;
 }
 .melodies .placeholder.open:hover {
 	background: #0f70b7;
+	border: 1px solid #0f70b7;
 }
 .melodies .floater-header {
 	background: #009fe3;
