Melodies widget footer style

--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
@@ -8,6 +8,15 @@
     top: 10rem;
 }
 
+#floater-evaluation-widget .floater-body {
+    padding: .5rem;
+    height: calc(100% - 7rem);
+    overflow: auto;
+}
+#floater-evaluation-widget .floater-footer {
+    height: 5.5rem;
+}
+
 #evaluation-confirm {
     width: 50%;
 }
