--- a/src/css/project/melodies.css
+++ b/src/css/project/melodies.css
@@ -278,6 +278,19 @@
 	background: #009fe3;
 }
 
+/* Select box */
+.melodies .select-menu-box .ui-selectmenu-button {
+	background: white;
+	border-radius: 1px;
+	border: 1px solid #aaa;
+}
+.melodies .ui-menu .ui-menu-item .ui-menu-item-wrapper {
+	background: white;
+}
+.melodies .ui-menu .ui-menu-item .ui-menu-item-wrapper.ui-state-active {
+	background: #eee;
+}
+
 /* Checkbox */
 .melodies .checkbox-row.checked .checkbox-icon {
 	background: url('../../images/melodies/checked.png') no-repeat center center;
