for melodies project is the timeline longer + help replaced

--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -356,7 +356,7 @@ body.intro #content-intro-terms {
 	vertical-align: top;
 }
 
-.field.help {
+#toolbar .help-label, #toolbar .app-toolbar-help {
 	display: none; /* usePumaHelp toggle default */
 }
 
