--- a/src/css/project/melodies.css
+++ b/src/css/project/melodies.css
@@ -143,7 +143,7 @@
 }
 
 /* help */
-.newDesign .field.help .help-btn .x-btn {
+.newDesign .app-toolbar-help .help-btn .x-btn {
 	border: 1px solid #aaa;
 }
 .melodies #app-toolbar-contexthelp span.x-btn-icon {
