--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
@@ -18,8 +18,15 @@
 
 /* Footer */
 
-#evaluation-confirm {
-    width: 50%;
+#evaluation-confirm, #evaluation-unselect {
+    font-size: .7rem;
+    margin: 0 .1rem;
+    width: 47%;
+}
+#evaluation-unselect[disabled=disabled] {
+    pointer-events: none;
+    color: #aaa;
+    background: #eee;
 }
 
 .widget-button-export:before {
