--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
@@ -1,5 +1,6 @@
 <div class="floater-row">
 	<div class="widget-button" id="evaluation-confirm"></div>
+	<div class="widget-button" id="evaluation-unselect" disabled="disabled">Clear selection</div>
 </div>
 <div class="floater-row">
 	<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">Export to SHP</div>
