--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -94,6 +94,16 @@
 .floater.active {
     z-index: 10001;
 }
+.floater-overlay {
+    display: none;
+    height: 100%;
+    width: 100%;
+    background: rgba(255,255,255,.9) url(../../../../images/loading.gif) no-repeat 50% 50%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 10;
+}
 
 .floater-header {
     background: #c92d42;
