--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -38,7 +38,7 @@
     display: inline-block;
     color: white;
     font-weight: 700;
-    padding: .4rem;
+    padding: .4rem .2rem;
     text-align: center;
     text-transform: uppercase;
     transition: background .3s ease-out;
