--- a/src/__new/js/view/widgets/Widget.css
+++ b/src/__new/js/view/widgets/Widget.css
@@ -1,10 +1,10 @@
 /* === Placeholders === */
 .placeholders-container {
-    height: 6rem;
-    left: 60rem;
+    height: 6.5rem;
     position: absolute;
+    right: 12rem;
     top: 0;
-    width: 12.5rem;
+    width: 10.5rem;
     z-index: 10000;
 }
 
@@ -14,7 +14,7 @@
     border-radius: .1rem;
     height: 1.5rem;
     position: relative;
-    margin: .5rem;
+    margin: .5rem .3rem;
     transition: background .3s ease-in-out;
     width: 10rem;
 }
@@ -149,15 +149,4 @@
 
 .floater-tool:hover {
     cursor: pointer;
-}
-
-@media screen and (max-width: 1240px) {
-    .placeholders-container {
-        left: 760px;
-    }
-}
-@media screen and (max-width: 1040px) {
-    .placeholders-container {
-        left: 700px;
-    }
 }
