Feature Info mock data

--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.css
@@ -14,20 +14,19 @@
 	z-index: 9999;
 }
 #feature-info-window .feature-info-window-header {
+	border-bottom: 2px solid #ddd;
 	font-size: .85rem;
 	font-weight: 700;
-	padding-right: .8rem;
+	padding: 0 .4rem .2rem .1rem;
+	margin-right: .2rem;
 }
 #feature-info-window .feature-info-window-body {
-	margin: .4rem .2rem .2rem 0;
+	margin: 0 .2rem .2rem 0;
 	overflow-x: hidden;
 	overflow-y: auto;
 	height: 7.6rem;
 }
 #feature-info-window .feature-info-window-body table tr {
-	border-top: 1px solid #ddd;
-}
-#feature-info-window .feature-info-window-body table tr:last-child {
 	border-bottom: 1px solid #ddd;
 }
 #feature-info-window .feature-info-window-body table tr td {
