--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.html
@@ -10,40 +10,24 @@
 				<td>666,666</td>
 			</tr>
 			<tr>
-				<td>Attribute: </td>
-				<td>True</td>
+				<td>Population over 65: </td>
+				<td>76,566</td>
 			</tr>
 			<tr>
-				<td>Attribute with long name: </td>
-				<td>Long </td>
+				<td>Area (km2): </td>
+				<td>4,725.03</td>
 			</tr>
 			<tr>
-				<td>Attribute with long name: </td>
-				<td>Long value of the attribute</td>
+				<td>Flooding zone Q20: </td>
+				<td>True </td>
 			</tr>
 			<tr>
-				<td>Population: </td>
-				<td>666,666</td>
+				<td>Flooding zone Q100: </td>
+				<td>False </td>
 			</tr>
 			<tr>
-				<td>Attribute: </td>
-				<td>True</td>
-			</tr>
-			<tr>
-				<td>Attribute with long name: </td>
-				<td>Long value of the attribute</td>
-			</tr>
-			<tr>
-				<td>Population: </td>
-				<td>666,666</td>
-			</tr>
-			<tr>
-				<td>Attribute: </td>
-				<td>True</td>
-			</tr>
-			<tr>
-				<td>Attribute with long name: </td>
-				<td>Long value of the attribute</td>
+				<td>Country: </td>
+				<td>Czech Republic </td>
 			</tr>
 		</table>
 	</div>
