Multicheck for attribute set settings

--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidget.css
@@ -23,9 +23,9 @@
     margin: 0 .1rem;
     width: 47%;
 }
-#evaluation-unselect[disabled=disabled] {
+#evaluation-confirm[disabled=disabled], #evaluation-unselect[disabled=disabled] {
     pointer-events: none;
-    color: #aaa;
+    color: #ccc;
     background: #eee;
 }
 
