--- a/src/__new/js/view/widgets/inputs/checkbox/Checkbox.html
+++ b/src/__new/js/view/widgets/inputs/checkbox/Checkbox.html
@@ -1,4 +1,4 @@
-<div class="floater-row checkbox-row" id="{{id}}" data-id="{{dataId}}">
+<div class="floater-row checkbox-row {{class}}" id="{{id}}" data-id="{{dataId}}">
     <a href="#">
         <span class="checkbox-icon"></span><span class="checkbox-label">{{name}}</span>
     </a>
