--- a/src/__new/js/view/widgets/CityWidget/CityWidget.css
+++ b/src/__new/js/view/widgets/CityWidget/CityWidget.css
@@ -33,8 +33,8 @@
 	width: 60%;
 }
 #melodies-selection-confirm[disabled=disabled] {
+	color: #ccc;
 	background: #eee;
-	color: #aaa;
 	font-style: italic;
 	pointer-events: none;
 	text-transform: none;
