--- a/src/__new/js/util/histogram/Histogram.css
+++ b/src/__new/js/util/histogram/Histogram.css
@@ -3,7 +3,8 @@
     height: 60px;
     padding-left: 1px;
     position: absolute;
-    width: 14.5rem;
+    min-width: 14.5rem;
+    width: 100%;
 }
 
 .histogram-bar {
