--- a/src/__new/js/view/widgets/inputs/selectbox/SelectBox.css
+++ b/src/__new/js/view/widgets/inputs/selectbox/SelectBox.css
@@ -19,7 +19,8 @@
 
 .select-menu-box .ui-selectmenu-button {
     background: #eee;
-    width: 15rem;
+    min-width: 15rem;
+    width: 90%;
     margin: .1rem 0;
     padding: .4rem .5rem;
     border: 1px solid #ccc;
