--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.css
@@ -26,6 +26,9 @@
 	overflow-y: auto;
 	height: 7.6rem;
 }
+#feature-info-window .feature-info-window-body table {
+	width: 100%;
+}
 #feature-info-window .feature-info-window-body table tr {
 	border-bottom: 1px solid #ddd;
 }
