--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.html
@@ -1,10 +1,3 @@
 <div class="tools-buttons-container">
-	<div id="feature-info" class="tool">Info</div>
-</div>
-<div id="feature-info-window">
-	<div class="feature-info-window-header">Feature name (GID)</div>
-	<div class="feature-info-window-body">
-		<table>
-		</table>
-	</div>
+	<div id="{{id}}" class="tool">Info</div>
 </div>
