feature info icon

--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.html
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoTool.html
@@ -1,3 +1,3 @@
 <div class="tools-buttons-container">
-	<div id="{{id}}" class="tool">Info</div>
+	<div id="{{id}}" class="tool" title="1. Click to activate/deactivate feature info &#13;2. Click on feature in map to get info">Info</div>
 </div>
