--- a/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
+++ b/src/__new/js/view/tools/FeatureInfoTool/FeatureInfoWindow.css
@@ -42,3 +42,14 @@
 #feature-info-window .feature-info-window-body table tr td:last-child {
 	text-align: right;
 }
+
+#feature-info-window .overlay {
+	display: none;
+	height: 100%;
+	width: 100%;
+	background: rgba(255,255,255,.9) url(../../../../../images/loading.gif) no-repeat 50% 50%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	z-index: 10;
+}
