--- a/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
+++ b/src/__new/js/view/widgets/EvaluationWidget/EvaluationWidgetFooter.html
@@ -2,3 +2,7 @@
 	<div class="widget-button" id="evaluation-confirm"></div>
 	<div class="widget-button" id="evaluation-unselect" disabled="disabled">Clear selection</div>
 </div>
+<div class="floater-row">
+	<div class="widget-button widget-button-export" id="export-shp" disabled="disabled">Export to GeoJSON</div>
+	<div class="widget-button widget-button-export" id="export-csv" disabled="disabled">Export to CSV</div>
+</div>
