--- a/src/__new/styles/style.css
+++ b/src/__new/styles/style.css
@@ -32,10 +32,10 @@
     color: #c92d42;
     font-size: 11px;
     font-weight: 600;
-    padding: .2rem .4rem .3rem .4rem;
+    padding: .2rem .2rem .3rem .2rem;
     text-transform: none;
-    margin: 0 .2rem;
-    width: 7rem;
+    margin: 0;
+    width: 49%;
 }
 .widget-button-export:hover {
     background: rgba(173,39,56,.2);
